crates/efr-render/src/elements/snapshots/efr_render__elements__tests__a_code_label_is_dim_on_a_terminal_and_plain_markdown_elsewhere.snap
---
source: crates/efr-render/src/elements/tests.rs
expression: shown
---
Ansi16:
Run this:

\e[2msh\e[0m
ls\e[36m -la\e[0m

It prints:

\e[2mtext\e[0m
total 0

None:
Run this:

\e[2msh\e[0m
ls -la

It prints:

\e[2mtext\e[0m
total 0
