crates/efr-render/src/elements/snapshots/efr_render__elements__tests__a_hex_palette_falls_back_to_the_nearest_of_sixteen.snap
---
source: crates/efr-render/src/elements/tests.rs
expression: every_role(&options)
---
\e[1;4;33mAccent heading\e[0m

\e[1;33mSecond heading\e[0m

\e[1;37mThird heading\e[0m

\e[1;3;37mFourth heading\e[0m

\e[37mProse with \e[0m\e[90mcode\e[0m\e[37m, a \e]8;;https://example.com\e\\e[0m\e[4;90mlink\e]8;;\e\\e[0m\e[37m and \e[0m\e[1;37mbold\e[0m\e[37m.\e[0m

\e[90m│ \e[0m\e[3;90mA quoted line.\e[0m

\e[90m[x]\e[0m\e[37m done\e[0m
\e[37m[ ] open\e[0m

\e[90m────────────────────────────────────────\e[0m

\e[90m@@ -1 +1 @@\e[0m
\e[1;90m-\e[0m\e[90mold\e[0m
\e[1;90m+\e[0m\e[90mnew\e[0m

\e[90msrc/main.rs\e[0m
\e[35mfn\e[0m\e[37m \e[0m\e[34mmain\e[0m\e[37m() { \e[0m\e[35mlet\e[0m\e[37m s \e[0m\e[35m=\e[0m\e[37m \e[0m\e[32m"hi"\e[0m\e[37m; } \e[0m\e[32m// note\e[0m

\e[37mtext\e[0m
\e[90mmuted\e[0m
\e[33maccent\e[0m
\e[1;33mheading\e[0m
\e[4;90mlink\e[0m
\e[90mcode\e[0m
\e[90msuccess\e[0m
\e[1;33mwarning\e[0m
\e[90merror\e[0m
\e[3;90mquote\e[0m
\e[90mdiff.add\e[0m
\e[90mdiff.remove\e[0m
\e[90mdiff.hunk\e[0m
\e[90mshell: cargo test\e[0m
