crates/efr-render/src/elements/snapshots/efr_render__elements__tests__a_hex_palette_in_truecolor.snap
---
source: crates/efr-render/src/elements/tests.rs
expression: every_role(&options)
---
\e[1;4;38;2;242;193;78mAccent heading\e[0m

\e[1;38;2;242;193;78mSecond heading\e[0m

\e[1;38;2;232;226;212mThird heading\e[0m

\e[1;3;38;2;232;226;212mFourth heading\e[0m

\e[38;2;232;226;212mProse with \e[0m\e[38;2;159;194;122mcode\e[0m\e[38;2;232;226;212m, a \e]8;;https://example.com\e\\e[0m\e[4;38;2;127;180;202mlink\e]8;;\e\\e[0m\e[38;2;232;226;212m and \e[0m\e[1;38;2;232;226;212mbold\e[0m\e[38;2;232;226;212m.\e[0m

\e[38;2;122;114;102m│ \e[0m\e[3;38;2;184;176;160mA quoted line.\e[0m

\e[38;2;143;191;106m[x]\e[0m\e[38;2;232;226;212m done\e[0m
\e[38;2;232;226;212m[ ] open\e[0m

\e[38;2;122;114;102m────────────────────────────────────────\e[0m

\e[38;2;127;180;202m@@ -1 +1 @@\e[0m
\e[1;38;2;224;93;79m-\e[0m\e[38;2;224;93;79mold\e[0m
\e[1;38;2;143;191;106m+\e[0m\e[38;2;143;191;106mnew\e[0m

\e[38;2;122;114;102msrc/main.rs\e[0m
\e[35mfn\e[0m\e[38;2;232;226;212m \e[0m\e[34mmain\e[0m\e[38;2;232;226;212m() { \e[0m\e[35mlet\e[0m\e[38;2;232;226;212m s \e[0m\e[35m=\e[0m\e[38;2;232;226;212m \e[0m\e[32m"hi"\e[0m\e[38;2;232;226;212m; } \e[0m\e[32m// note\e[0m

\e[38;2;232;226;212mtext\e[0m
\e[38;2;122;114;102mmuted\e[0m
\e[38;2;242;193;78maccent\e[0m
\e[1;38;2;242;193;78mheading\e[0m
\e[4;38;2;127;180;202mlink\e[0m
\e[38;2;159;194;122mcode\e[0m
\e[38;2;143;191;106msuccess\e[0m
\e[1;38;2;232;163;61mwarning\e[0m
\e[38;2;224;93;79merror\e[0m
\e[3;38;2;184;176;160mquote\e[0m
\e[38;2;143;191;106mdiff.add\e[0m
\e[38;2;224;93;79mdiff.remove\e[0m
\e[38;2;127;180;202mdiff.hunk\e[0m
\e[38;2;122;114;102mshell: cargo test\e[0m
