crates/efr-render/src/elements/snapshots/efr_render__elements__tests__bullet_list_w40.snap
---
source: crates/efr-render/src/elements/tests.rs
expression: "readable(&render(markdown, &options))"
---
• one
• two, with text long enough to wrap
  inside the item at forty columns
  ◦ nested
    ▪ deeper
• three
