crates/efr-render/src/elements/snapshots/efr_render__elements__tests__code_plain_w40.snap
---
source: crates/efr-render/src/elements/tests.rs
expression: "readable(&render(markdown, &options))"
---
plain text
    after a tab
