crates/efr-render/src/elements/snapshots/efr_render__elements__tests__code_rust_w80.snap
---
source: crates/efr-render/src/elements/tests.rs
expression: "readable(&render(markdown, &options))"
---
\e[2mrust\e[0m
\e[35mfn\e[0m \e[34mmain\e[0m() {
    \e[35mlet\e[0m greeting \e[35m=\e[0m \e[32m"hello"\e[0m; \e[32m// a comment\e[0m
    println!(\e[32m"\e[0m\e[33m{greeting}\e[0m\e[32m, from a line that is wider than forty columns"\e[0m);
}
