crates/efr-render/src/elements/snapshots/efr_render__elements__tests__diff_in_a_truecolor_theme.snap
---
source: crates/efr-render/src/elements/tests.rs
expression: "readable(&render(element(\"diff\"), &options))"
---
\e[2mdiff\e[0m
\e[1mdiff --git a/src/main.rs b/src/main.rs\e[0m
\e[1mindex 1111111..2222222 100644\e[0m
\e[1m--- a/src/main.rs\e[0m
\e[1m+++ b/src/main.rs\e[0m
\e[36m@@ -1,3 +1,3 @@\e[0m fn main() {
 \e[38;2;203;166;247mfn\e[0m\e[38;2;205;214;244m \e[0m\e[3;38;2;137;180;250mmain\e[0m\e[38;2;147;153;178m()\e[0m\e[38;2;205;214;244m \e[0m\e[38;2;147;153;178m{\e[0m
\e[1;31;48;2;76;37;52m-\e[0m\e[38;2;205;214;244;48;2;76;37;52m    \e[0m\e[3;38;2;137;180;250;48;2;76;37;52mprintln!\e[0m\e[38;2;147;153;178;48;2;76;37;52m(\e[0m\e[38;2;166;227;161;48;2;76;37;52m"old"\e[0m\e[38;2;147;153;178;48;2;76;37;52m);\e[0m
\e[1;32;48;2;34;62;51m+\e[0m\e[38;2;205;214;244;48;2;34;62;51m    \e[0m\e[3;38;2;137;180;250;48;2;34;62;51mprintln!\e[0m\e[38;2;147;153;178;48;2;34;62;51m(\e[0m\e[38;2;166;227;161;48;2;34;62;51m"new"\e[0m\e[38;2;147;153;178;48;2;34;62;51m);\e[0m
 \e[38;2;147;153;178m}\e[0m
