crates/efr-render/src/elements/snapshots/efr_render__elements__tests__diff_w80.snap
---
source: crates/efr-render/src/elements/tests.rs
expression: "readable(&render(markdown, &options))"
---
\e[1mdiff --git a/src/main.rs b/src/main.rs\e[0m
\e[1mindex 1111111..2222222 100644\e[0m
\e[1m--- a/src/main.rs\e[0m
\e[1m+++ b/src/main.rs\e[0m
\e[36m@@ -1,3 +1,3 @@\e[0m fn main() {
 \e[35mfn\e[0m \e[34mmain\e[0m() {
\e[1;31m-\e[0m    println!(\e[32m"old"\e[0m);
\e[1;32m+\e[0m    println!(\e[32m"new"\e[0m);
 }
